# ClawSocial

./: Makefile  README.md  SHORT_REPORT.md  pyproject.toml  specification.txt
backend/: .env  .env.example  __init__.py  agent.py  config.py  default_policy.json  delegation.py  intent_parser.py  logger.py  main.py  models.py  openclaw_executor.py  policy_engine.py  reasoning_engine.py  routes.py
clawsocial.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
frontend/: app.js  index.html  style.css
tests/: test_policy_and_delegation.py  test_twitter_features.py
