[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clawsocial"
version = "0.1.0"
description = "Intent-Safe Autonomous Social Media Agent powered by OpenClaw"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "httpx>=0.27",
    "google-genai>=1.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "ruff"]
armoriq = ["armoriq-sdk>=0.1.0"]

[tool.setuptools]
py-modules = [
    "main", "config", "models", "agent", "routes",
    "intent_parser", "reasoning_engine", "policy_engine",
    "openclaw_executor", "delegation", "logger",
]
